...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="team2" />
    </RadioGroup>

    <EditText
        android:id="@+id/userName1"
        android:layout_width="244dp"
        android:layout_height="94dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <Button
        android:id="@+id/save"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:text="save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
